Bug 128627 - FILEOPEN: Radar Chart is broken
Summary: FILEOPEN: Radar Chart is broken
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:6.4.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-11-06 12:24 UTC by Xisco Faulí
Modified: 2019-11-13 09:42 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (51.16 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2019-11-06 12:24 UTC, Xisco Faulí
Details
comparison MSO 2010 and LibreOffice 6.4 Master (115.08 KB, image/png)
2019-11-06 12:24 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2019-11-06 12:24:17 UTC
Created attachment 155574 [details]
sample file

Steps to reproduce:
1. Open attached document

-> Radar chart has incorrect lines positions. See comparison image

Reproduced in

Version: 6.4.0.0.alpha1+
Build ID: ee909ca2c02f949605f68720c3f1eef658502749
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2019-11-06 12:24:49 UTC
Created attachment 155575 [details]
comparison MSO 2010 and LibreOffice 6.4 Master
Comment 2 Xisco Faulí 2019-11-06 12:26:08 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=830e539547c463b932ce643517f880789185032d

author	Balazs Varga <balazs.varga991@gmail.com>	2019-09-19 15:15:58 +0200
committer	László Németh <nemeth@numbertext.org>	2019-09-23 15:53:14 +0200
commit 830e539547c463b932ce643517f880789185032d (patch)
tree 9821b48984af82e31edfaa2f5bc0e65a92fd3467
parent 9f1352381eb54d3fc822cd56060a69bd51f62a21 (diff)
tdf#127393 OOXML chart import: fix X axis position setting "CrossBetween"

Bisected with: bibisect-linux64-6.4

Adding Cc: to Balazs Varga
Comment 3 Commit Notification 2019-11-12 20:47:35 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b5c14ba1987ba102ac98530e2e718100655e1042

tdf#128627 tdf#128634 Fix OOXML import of CrossBetween

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2019-11-13 09:42:26 UTC
Verified in

Version: 6.4.0.0.alpha1+
Build ID: 26b7ff2b6cc4def8ff7b02e223961534ba88e654
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Balázs Varga, thanks for fixing this issue!